created login screen
eventually will code PHP for cookie and "REMEMBER ME" data. Will have to use AWS database for cookie storage and PHP integration

--- a/Frontend/stylesheet.css
+++ b/Frontend/stylesheet.css
@@ -145,3 +145,6 @@ a {
     -webkit-transition: all 0.3s ease;
     transition: all 0.3s ease;
   }
+  .input-name {
+    justify-items: center;
+  }
